--- a/.github/workflows/check_as_cran.yaml
+++ b/.github/workflows/check_as_cran.yaml
@@ -6,7 +6,7 @@ on:
     branches:
       - main
 
-name: check
+name: check_as_cran
 
 jobs:
   check:
@@ -18,11 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         config:
-        - {os: windows-latest, r: 'release'}
-        - {os: macOS-latest, r: 'release'}
-        - {os: ubuntu-22.04, r: 'devel', rspm: "https://packagemanager.rstudio.com/cran/__linux__/jammy/latest"}
         - {os: ubuntu-22.04, r: 'release', rspm: "https://packagemanager.rstudio.com/cran/__linux__/jammy/latest"}
-        - {os: ubuntu-22.04, r: 'oldrel', rspm: "https://packagemanager.rstudio.com/cran/__linux__/jammy/latest"}
 
     env:
       RSPM: ${{ matrix.config.rspm }}
